--- a/src/main/webapp/resources/stylesheets/bootstrap.css
+++ b/src/main/webapp/resources/stylesheets/bootstrap.css
@@ -206,7 +206,7 @@ textarea {
 body {
   margin : 0 20px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
@@ -3161,7 +3161,7 @@ input[type="submit"].btn.btn-mini {
 }
 .nav-tabs,
 .nav-pills {
-	width:	98%;
+	width:	100%;
   *zoom: 1;
 }
 .nav-tabs:before,
@@ -6307,8 +6307,8 @@ button.close {
 
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 20px;
+  /*padding-left: 15px; */
   margin-right: auto;
   margin-left: auto;
 }
