--- a/src/main/webapp/resources/angular-widget/app/styles/main.css
+++ b/src/main/webapp/resources/angular-widget/app/styles/main.css
@@ -8,6 +8,8 @@
 
 @import "../bower_components/malhar-angular-dashboard/dist/malhar-angular-dashboard.css";
 
+@import "../bower_components/malhar-angular-table/dist/mlhr-table.css";
+
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 
 article,
