employee hira and org hira

--- a/src/main/webapp/resources/javascripts/primitives/primitives.latest.css
+++ b/src/main/webapp/resources/javascripts/primitives/primitives.latest.css
@@ -35,6 +35,16 @@ background-position-y: 3px ! important;
 
 }
 
+.employee{
+   background-position: center center;
+
+background-image: url(http://localhost:8080/time/resources/images//icon/people.jpg) ! important;
+background-size:13px 13px  ! important;
+background-repeat: no-repeat ! important;
+background-position-y: 3px ! important;s
+
+}
+
 .bp-item {
     position: absolute;
     overflow: hidden;
