--- a/src/main/webapp/resources/javascripts/primitives/primitives.latest.css
+++ b/src/main/webapp/resources/javascripts/primitives/primitives.latest.css
@@ -2,7 +2,7 @@
 .add{
    background-position: center center;
 background-repeat: no-repeat ! important ;
-background-image: url(http://localhost:7080/time/resources/images/icon/add.png) ! important;
+background-image: url(/time/resources/images/icon/add.png) ! important;
 background-size:13px 13px  ! important;
 background-position-y: 3px ! important;
 }
@@ -10,7 +10,7 @@ background-position-y: 3px ! important;
 .delete{
    background-position: center center;
 
-background-image: url(http://localhost:7080/time/resources/images//icon/delete.png) ! important;
+background-image: url(/time/resources/images/icon/delete.png) ! important;
 background-size:13px 13px  ! important;
 background-repeat: no-repeat ! important;
 background-position-y: 3px ! important;
@@ -19,7 +19,7 @@ background-position-y: 3px ! important;
 .editInfo{
    background-position: center center;
 
-background-image: url(http://localhost:7080/time/resources/images//icon/editInfo.png) ! important;
+background-image: url(/time/resources/images//icon/editInfo.png) ! important;
 background-size:13px 13px  ! important;
 background-repeat: no-repeat ! important;
 background-position-y: 3px ! important;
@@ -28,7 +28,7 @@ background-position-y: 3px ! important;
 .edit{
    background-position: center center;
 
-background-image: url('resources/images/icon/edit.png') ! important;
+background-image: url(/time/resources/images/icon/edit.png) ! important;
 background-size:13px 13px  ! important;
 background-repeat: no-repeat ! important;
 background-position-y: 3px ! important;
@@ -38,7 +38,7 @@ background-position-y: 3px ! important;
 .employee{
    background-position: center center;
 
-background-image: url('resources/images/icon/people.jpg') ! important;
+background-image: url(time/resources/images/icon/people.jpg) ! important;
 background-size:13px 13px  ! important;
 background-repeat: no-repeat ! important;
 background-position-y: 3px ! important;s
