--- a/src/main/webapp/resources/angular-widget/app/grantt/gantt.css
+++ b/src/main/webapp/resources/angular-widget/app/grantt/gantt.css
@@ -227,7 +227,7 @@ body{
   top:0;
   position:absolute;
   width:18px;
-  background: url(res/milestone.png) no-repeat;
+  background: url(/time/resources/angular-widget/app/grantt/res/milestone.png) no-repeat;
   height:18px;
   display:none;
 }
